test/resources/typer/passing/ExtLambda4.1.scala
object Lambda {
  val f: Unit => Int = (\() -> 1);
  Std.printInt(f())
}
