test/resources/typer/failing/ExtTupleError10.scala
object TupleError {
  val a: Int = 1;
  // Not a tuple.
  a(0)
}